--- a/R1.md
+++ b/R1.md
@@ -39,3 +39,14 @@
 **Aprendizados:** Ter uma guia para seguir deixa as coisas bem mais faceis, agora sinto que consigo produzir mais nesse bot, por causa do comando help que tem comando ainda não implementados e isso faz com que eu saiba o que devo fazer logo de cara, e outro aprendizado é que é muito bom pra você como programador, programar em algo mais baixo nível como C, visto que linguagens como Javascript e python devido ao grau de abstração podem te deixar bem acomodado.
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/d7d23b7b11ce8d633a0261789c770e6b731ef966) e [Estrutura de dados](https://ruandg.github.io/apostilaC_ED.html)
+
+### Dia 5: 9 de julho, 2020
+
+**Progresso do dia:** Revisei um pouco de C, fiz alguns exercicios no URI para pegar o jeito com a linguagem novamente, para começar a estudar estrutura de dados mais uma vez e comecei a clonar a interface do twitter, para colocar varias mensagens de aniversário pra uma amiga.
+
+**Aprendizados:** Hoje tive um pouco de dificuldade de fazer algumas coisas com CSS, porque pulei muita etapa, a partir de hoje vou tentar me dedicar mais a programação web com HTML CSS e JS, para ter uma base mais sólida, e quando eu for pra algum framework saber tanto a base quanto o framework/lib.
+
+**Link do trabalho:** [Estrutura de dados](https://ruandg.github.io/decisaorepeticao.html) [Interface twitter](https://codepen.io/jpalvesl/pen/pogVpwp)
+
+
+
