--- a/R1.md
+++ b/R1.md
@@ -48,5 +48,13 @@
 
 **Link do trabalho:** [Estrutura de dados](https://ruandg.github.io/decisaorepeticao.html) [Interface twitter](https://codepen.io/jpalvesl/pen/pogVpwp)
 
+### Dia 6: 10 de julho, 2020
+
+**Progresso do dia:** Hoje clonei a interface do whatsapp versão de iPhone X, como se tivesse num grupo, para dar de "aniversário" pra um amigo, pedir as mensagens pra as pessoas e colocar lá.
+
+**Aprendizados:** 
+
+**Link do trabalho:** [Interface whatsapp](https://codepen.io/jpalvesl/pen/gOPKpwx)
+
 
 
