--- a/R1.md
+++ b/R1.md
@@ -52,9 +52,16 @@
 
 **Progresso do dia:** Hoje clonei a interface do whatsapp versão de iPhone X, como se tivesse num grupo, para dar de "aniversário" pra um amigo, pedir as mensagens pra as pessoas e colocar lá.
 
-**Aprendizados:** 
+**Aprendizados:** É muito bom pra você aprender a parte da tecnologia pura pra você tentar entender qual a melhor forma de fazer algo, ou simplesmente você buscar um jeito próprio de fazer antes de começar a usar bibliotecas para isso
 
 **Link do trabalho:** [Interface whatsapp](https://codepen.io/jpalvesl/pen/gOPKpwx)
 
 
+### Dia 7: 11 de julho, 2020
+
+**Progresso do dia:** Implementei um comando que lista todos os avatars das pessoas marcadas nesse comando e caso não haja ninguem marcado, ele retorna o avatar do usuário que executou o comando, e outros dois comando que retornam uma MessageEmbed, uma com informações sobre o servidor e outra sobre e a outra com o convite do bot pra você adicionar ao servidor
+
+**Aprendizados:** Aprendi que no discord js você pode ficar dando loop entre os elemento porque dentro de um objeto tem a referência pra o outro, como exemplo dentro da messagem posso entrar na guilda, e lá nos usuário e dos usários voltar pra guilda
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/80547d0091d20bff21cf8736488754c19c6d9c07)
 
