--- a/R1.md
+++ b/R1.md
@@ -65,3 +65,11 @@
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/80547d0091d20bff21cf8736488754c19c6d9c07)
 
+### Dia 8: 12 de julho, 2020
+
+**Progresso do dia:** Hoje eu implementei uma função que lista informações sobre algum cargo
+
+**Aprendizados:** Por pouco eu faço uma condicional de 29 condições, mas quando li a documentação da estrutura de dados tinha um método que retornava o que eu queria e era so tratar para eu escolher a visualização dos dados.
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/05d1cbc070d24b1d6b4fdf3bba51701ad94010bd)
+
