--- a/R1.md
+++ b/R1.md
@@ -73,3 +73,11 @@
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/05d1cbc070d24b1d6b4fdf3bba51701ad94010bd)
 
+### Dia 9: 13 de julho, 2020
+
+**Progresso do dia:** Mais um pouco de esutdo com C e minha lógica de programação básica não está muito boa, pelo acôomodo que é usar bibliotecas com soluções prontas
+
+**Aprendizados:** Hoje foi mais revisão e a importancia de se manter praticando
+
+**Link do trabalho:** [Estrutura de dados](https://ruandg.github.io/arrays.html)
+
