--- a/R1.md
+++ b/R1.md
@@ -81,3 +81,11 @@
 
 **Link do trabalho:** [Estrutura de dados](https://ruandg.github.io/arrays.html)
 
+### Dia 10: 14 de julho, 2020
+
+**Progresso do dia:** Hoje terminei o clone do twitter verão mobile, só falta adicionar os tweets via js pra eu poder alterar só um json e as diferenças serem refletidas no html, com relação ao bot do discord fiz 3 comando hoje, um que lista dados sobre o clima de algum lugar que você pesquisar, um que pesquisa uma noticia, e um comando simples simulando uma magic 8ball. Também alterei alguns códiigos para melhor visualização
+
+**Aprendizados:** É bom saber a hora certa de refatorar o código sem ser otimização prematura, ou eu to demorando demais pra refatorar ou refatorando muito cedo
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/cb185fad24f16730311e47829952ba6990080e9c)
+
