--- a/R1.md
+++ b/R1.md
@@ -89,3 +89,12 @@
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/cb185fad24f16730311e47829952ba6990080e9c)
 
+### Dia 11: 15 de julho, 2020
+
+**Progresso do dia:** Hoje eu fiz com que o comnaod help acesse todos os comando pra poder exibir a forma de usar de cada comando e assim ficar mais simples de saber como cada comando funciona, também adicionei alguns comando de interação, formatei o comando de pesquisar notícias para ficar mais agradável de se ver e cada notícia tem o link de redirecionamento.
+
+**Aprendizados:** Javascript é uma linguagem estranha, eu achei que fosse ter que reescrever muita coisa, porque tive que fazer a função do comando help aceitar 3 parâmetros em vez de 2, que é o padrão de todo o restante, mas quanto testei se ia quebrar algo tudo funcionou normalmente.
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/a2d2bcdd874d906ea8d97bd2cef44f83fda0bbf2)
+
+
