--- a/R1.md
+++ b/R1.md
@@ -97,4 +97,12 @@
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/a2d2bcdd874d906ea8d97bd2cef44f83fda0bbf2)
 
+### Dia 12: 16 de julho, 2020
+
+**Progresso do dia:** Hoje eu tentei fazer meu bot tocar musica, mas falhei miseravelmente, primeiramente porque o gitpod não deixa instalar o ffmped no repositorio que você está codando e depois porque meu computador é muito lento ai fiquei de cabeça quente e parei.
+
+**Aprendizados:** Nem sempre as coisas saem como a gente planeja e é bom dar um tempo em algum projeto por um tempo.
+
+**Link do trabalho:** Sem links, apenas aprendizados kkkk.
+
 
