--- a/R1.md
+++ b/R1.md
@@ -105,4 +105,20 @@
 
 **Link do trabalho:** Sem links, apenas aprendizados kkkk.
 
+### Dia 13: 17 de julho, 2020
+
+**Progresso do dia:** Hoje iniciei um site para o bot e fiz o header com o menu de navegação, a introdução ao bot e a lista de vantagens.
+
+**Aprendizados:** Descobri um site que faz o linear gradient pra você e achei muito bom.
+
+**Link do trabalho:** [Kurisu site](https://jpalvesl.github.io/kurisu-site/)
+
+### Dia 14: 18 de julho, 2020
+
+**Progresso do dia:** Fiz as seções relacionadas aos comandos do bot e o footer, agora só falta melhorar a disposição do conteúdo as cores e por fim a responsividade.
+
+**Aprendizados:** To aprendendo a usar o js pra mexer no html, por enquanto só tenho usando pra não ficar repetindo código, mas ainda quero ir mais a fundo.
+
+**Link do trabalho:** [Kurisu site](https://jpalvesl.github.io/kurisu-site/)
+
 
