--- a/R1.md
+++ b/R1.md
@@ -121,4 +121,10 @@
 
 **Link do trabalho:** [Kurisu site](https://jpalvesl.github.io/kurisu-site/)
 
+### Dia 15: 19 de julho, 2020
 
+**Progresso do dia:** Estudei um pouco sobre cores, tentei mudar as cores do site, arrumei alguns erros no texto, porém ainda não estou achando ela tão agradável, vou dedicar o dia de amanhã prra estudar sobre cores e hierarquia.
+
+**Aprendizados:** O dia foi mais pra refatorar do que aprender algo novo em si.
+
+**Link do trabalho:** [Kurisu site](https://jpalvesl.github.io/kurisu-site/)
