--- a/R1.md
+++ b/R1.md
@@ -128,3 +128,12 @@
 **Aprendizados:** O dia foi mais pra refatorar do que aprender algo novo em si.
 
 **Link do trabalho:** [Kurisu site](https://jpalvesl.github.io/kurisu-site/)
+
+
+### Dia 16: 20 de julho, 2020
+
+**Progresso do dia:** Hoje finalizei o clone do twitter fazendo com que os tweets sejam adicionados via JS e não mais estaticamente, tudo fica mais delicinhas quando se usa programação pra resolver.
+
+**Aprendizados:** Eu to com um vício que eu peguei do react, to querendo transformar o retorno dos tweets em template string e completar o comteudo dentro dela, não sei se isso é bom ou ruim, e ainda não fiz, mas fico muito tentado, porém to tentando aprender o JS Puro mesmo.
+
+**Link do trabalho:** [Jasmin - Birthday](https://jpalvesl.github.io/jasmin-birthday/)
