--- a/R1.md
+++ b/R1.md
@@ -137,3 +137,11 @@
 **Aprendizados:** Eu to com um vício que eu peguei do react, to querendo transformar o retorno dos tweets em template string e completar o comteudo dentro dela, não sei se isso é bom ou ruim, e ainda não fiz, mas fico muito tentado, porém to tentando aprender o JS Puro mesmo.
 
 **Link do trabalho:** [Jasmin - Birthday](https://jpalvesl.github.io/jasmin-birthday/)
+
+### Dia 17: 21 de julho, 2020
+
+**Progresso do dia:** Hoje voltei a estudar React depois de aprender mais sobre o Js puro e estava lendo o eBook do [Mateus Silva](https://linktr.ee/imateus.silva) sobre React Hooks, muito bom super recomendo e depois de ver os vídeos que acompanham o eBook to com muita vontade de refatorar um projetinho antigo meu agora usando os Hooks corretos no lugar de useState e UseEffect apenas.
+
+**Aprendizados:** O useEffect pode ser renderizado a cada mudança em tela caso você precise, o useContext ajuda demais fazendo com que você possa compartilhar um contexto entre componentes e não ficar passando via props, e alguns componentes que nem usam a prop recebem, useCallback evita renderizações desnececárias e um dos casos de uso é quando você passa uma função de setState como prop pra um filho, daí usando useCallback nessa função, faz com que ela não seja renderizada novamente.
+
+**Link do trabalho:** [React Hooks](https://devacademy.com.br/ebooks/react-hooks/)
