--- a/R1.md
+++ b/R1.md
@@ -145,3 +145,11 @@
 **Aprendizados:** O useEffect pode ser renderizado a cada mudança em tela caso você precise, o useContext ajuda demais fazendo com que você possa compartilhar um contexto entre componentes e não ficar passando via props, e alguns componentes que nem usam a prop recebem, useCallback evita renderizações desnececárias e um dos casos de uso é quando você passa uma função de setState como prop pra um filho, daí usando useCallback nessa função, faz com que ela não seja renderizada novamente.
 
 **Link do trabalho:** [React Hooks](https://devacademy.com.br/ebooks/react-hooks/)
+
+### Dia 18: 22 de julho, 2020
+
+**Progresso do dia:** Hoje eu implementei um comando que codifica e decodifica codigo morse, e outro que mostra dados referentes a um pokemon específico, com base nos dados do tipo do pokemon vou fazer um comando para listar as fraquezas dele.
+
+**Aprendizados:** Ter q criar o esquema para mostrar os tipos de fraquezas do pokemon mostra como muitas vezes os dados estão lá de forma implicita.
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/c5ff158d58c89d6a9969f9145bef77924c8ea273)
