--- a/R1.md
+++ b/R1.md
@@ -153,3 +153,20 @@
 **Aprendizados:** Ter q criar o esquema para mostrar os tipos de fraquezas do pokemon mostra como muitas vezes os dados estão lá de forma implicita.
 
 **Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/c5ff158d58c89d6a9969f9145bef77924c8ea273)
+
+
+### Dia 19: 23 de julho, 2020
+
+**Progresso do dia:** Criei os comando make-meme e base64 para o bot do discord.
+
+**Aprendizados:** Passar objetos como um Array como query param, é meio complicado, usei o pacote qs, que basicmante transformou o objeto que eu precisava em query string.
+
+**Link do trabalho:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/19eac9b5a7a0f71ea7b2047fcd2b4feb4c2da2f6)
+
+### Dia 20: 24 de julho, 2020
+
+**Progresso do dia:** Hoje fiz algumas alterações em um projeto antigo, e tentei melhorar o comando de pokedex do bot.
+
+**Aprendizados:** Refatorar código também faz bem pra fixar contúdos, porque você melhora algo que previamente era o melhor que você conhecia.
+
+**Links dos trabalhos:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/aa0a2a360f46902a3176b9dc6a2505e4140f90bb) e [Plantinhas app](https://github.com/jpalvesl/plantinhas-app/commit/f238f9355b7f05de8c2e6ee3a25271dd3a6b8400)
