--- a/R1.md
+++ b/R1.md
@@ -170,3 +170,14 @@
 **Aprendizados:** Refatorar código também faz bem pra fixar contúdos, porque você melhora algo que previamente era o melhor que você conhecia.
 
 **Links dos trabalhos:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/aa0a2a360f46902a3176b9dc6a2505e4140f90bb) e [Plantinhas app](https://github.com/jpalvesl/plantinhas-app/commit/f238f9355b7f05de8c2e6ee3a25271dd3a6b8400)
+
+### Dia 21: 25 de julho, 2020
+**Descanso**
+
+### Dia 22: 26 de julho, 2020
+
+**Progresso do dia:** Hoje eu revisei todos os códigos do bot e mudei algumas palavras que ainda estavam em inglês, e também arrumei o site adicionando os novos comando do bot.
+
+**Aprendizados:** Revisão apenas.
+
+**Links dos trabalhos:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/aeda1bb1b1be45c3cec41e66bfcd19eb50f007db)
