--- a/R1.md
+++ b/R1.md
@@ -181,3 +181,29 @@
 **Aprendizados:** Revisão apenas.
 
 **Links dos trabalhos:** [Kurisu bot](https://github.com/jpalvesl/kurisu/commit/aeda1bb1b1be45c3cec41e66bfcd19eb50f007db)
+
+### Dia 23: 27 de julho, 2020
+
+**Progresso do dia:** Comecei a usar a contextAPI no projeto de catalogar as plantas.
+
+**Aprendizados:** A contextAPi ajuda muito pra você compartilhar algum estado ou setState para elementos mais profundos na arvore.
+
+**Links dos trabalhos:** sem link.
+
+
+### Dia 24: 28 de julho, 2020
+
+**Progresso do dia:** Criei custom Hooks e usei em conjunto com a contextAPI e refatorei um pouco do código do aplicativo das plantinhas, isso deixou ele bem mais facil de se ler.
+
+**Aprendizados:** Nem sempre vale a pena querer colocar muita responsabilidade em uma única função, eu estava querendo criar um hook mais generico pra usar o storage, sendo que eu poderia criar hooks específicos e com isso abstrair a lógica da aplicação.
+
+**Links dos trabalhos:** sem link.
+
+
+### Dia 25: 29 de julho, 2020
+
+**Progresso do dia:** Dei um passo atrás voltei a estudar UI e UX, para que o aplicativo fique mais agradável pra quem está mexendo e estou refazendo o protótipo do zero, para ter uma ideia melhor de como o aplicativo deve ficar e testar meus conhecimentos usando o Figma.
+
+**Aprendizados:** Aprendi a criar componentes no figma que ajuda muito na reutilização de elementos, e quanto ocorre alteração no componente pai, isso reflete nos filhos fazendo com que o trabalho deixe de ser repetitivo.
+
+**Links dos trabalhos:** sem link.
