--- a/R1.md
+++ b/R1.md
@@ -207,3 +207,19 @@
 **Aprendizados:** Aprendi a criar componentes no figma que ajuda muito na reutilização de elementos, e quanto ocorre alteração no componente pai, isso reflete nos filhos fazendo com que o trabalho deixe de ser repetitivo.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 26: 30 de julho, 2020
+
+**Progresso do dia:** Finalizando a primeira versão do ReDesign do aplicativo das plantinhas no figma, e prototipando.
+
+**Aprendizados:** Tem muita importância em saber usar a ferramenta que você está trabalhando pra extrair o máximo dela.
+
+**Links dos trabalhos:** sem link.
+
+### Dia 27: 31 de julho, 2020
+
+**Progresso do dia:** Refazendo a parte visual agora no aplicativo em si, e vi algumas aulas sobre UX, englobando principalmente a área de pesquisa.
+
+**Aprendizados:** Ter uma pesquisa muitas vezes faz com que você poupe dinheiro, caso feita de forma correta.
+
+**Links dos trabalhos:** sem link.
