--- a/R1.md
+++ b/R1.md
@@ -223,3 +223,11 @@
 **Aprendizados:** Ter uma pesquisa muitas vezes faz com que você poupe dinheiro, caso feita de forma correta.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 28: 1 de julho, 2020
+
+**Progresso do dia:** Tive que refatorar mais código do aplicativo das plantas, para ele funcionar melhor, fiz com que o fluxo de pastas possa ser acessado.
+
+**Aprendizados:** Tentar sempre escerver o código mais legivel possivel, pois dar manutenção leva mais tempo e trabalho do que escrever pela primeira vez.
+
+**Links dos trabalhos:** sem link.
