--- a/R1.md
+++ b/R1.md
@@ -224,7 +224,7 @@
 
 **Links dos trabalhos:** sem link.
 
-### Dia 28: 1 de julho, 2020
+### Dia 28: 1 de agosto, 2020
 
 **Progresso do dia:** Tive que refatorar mais código do aplicativo das plantas, para ele funcionar melhor, fiz com que o fluxo de pastas possa ser acessado.
 
