--- a/R1.md
+++ b/R1.md
@@ -231,3 +231,32 @@
 **Aprendizados:** Tentar sempre escerver o código mais legivel possivel, pois dar manutenção leva mais tempo e trabalho do que escrever pela primeira vez.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 29: 2 de agosto, 2020
+**Descanço**
+
+### Dia 30: 3 de agosto, 2020
+
+**Progresso do dia:** Iniciando o NLW da Rocketseat, porém usando Gatsby para fazer a página web.
+
+**Aprendizados:** Evolui um pouco pra colocar os plugins, e tentei pesquisar por mim mesmo pra fazer as coisas, ainda tô bem lento, mas tô tentando.
+
+**Links dos trabalhos:** sem link.
+
+
+### Dia 31: 4 de agosto, 2020
+
+**Progresso do dia:** Finalizando a pagina web e estudando UX no Bootcamp da How Education.
+
+**Aprendizados:** Tenho que melhorar minha estrutura de pastas para trabalhar com o gatsby, mas ta sendo bem interessante.
+
+**Links dos trabalhos:** sem link.
+
+
+### Dia 32: 5 de agosto, 2020
+
+**Progresso do dia:** Estudei mais sobre UX, e comecei o dia dois da NLW, tô atrasado, porém tô tentando absorver o máximo de conteúdo, porque tem muito conteudo legal que é simplesmente jogado na sua cara.
+
+**Aprendizados:** migrations é um jeito bem massinha de trabalhar com banco de dados, mas não tô conseguindo dar rollback e to tendo que apagar ele na mão sempre.
+
+**Links dos trabalhos:** sem link.
