--- a/R1.md
+++ b/R1.md
@@ -260,3 +260,19 @@
 **Aprendizados:** migrations é um jeito bem massinha de trabalhar com banco de dados, mas não tô conseguindo dar rollback e to tendo que apagar ele na mão sempre.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 33: 6 de agosto, 2020
+
+**Progresso do dia:** Hoje eu fiz as partes 3 e 4 do Proffy da NLW e estudei sobre prototipação com o Figma.
+
+**Aprendizados:** Consegui, voltar a acompanhar o conteúdo.
+
+**Links dos trabalhos:** sem link.
+
+### Dia 34: 7 de agosto, 2020
+
+**Progresso do dia:** Hoje eu comecei a ultima parte do app mobile da NLW e também estudei um pouco com o bootcamp da how.
+
+**Aprendizados:** Aprendi algumas coisas no figma como o smart animate, auto layout, grid, mascara e um pouco sobre UI.
+
+**Links dos trabalhos:** sem link.
