--- a/R1.md
+++ b/R1.md
@@ -276,3 +276,19 @@
 **Aprendizados:** Aprendi algumas coisas no figma como o smart animate, auto layout, grid, mascara e um pouco sobre UI.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 35: 8 de agosto, 2020
+
+**Progresso do dia:** Finalizei o ultimo dia de NLW, assisti duas aulas do bootcamp.
+
+**Aprendizados:** Na nova versão do expo muita coisa foi desacoplada do react native, apesar q isso ja tinha acontecido algumas atualizações no react native padrão.
+
+**Links dos trabalhos:** sem link.
+
+### Dia 36: 9 de agosto, 2020
+
+**Progresso do dia:** Agora estou acompanhando o bootcamp da HOW e documentei as API's no insomnia dos projetos que eu fiz e criei os gists pra criar o botão de exportar e li um pouco sobre react.
+
+**Aprendizados:** Li um pouco de alguns passos pra que você deve fazer para ter uma aplicação performática com React porém tenho um certo receio de estar fazendo overengeneering, tenho q ler um pouco mais sobre renderização desnecessária no React.
+
+**Links dos trabalhos:** sem link.
