--- a/R1.md
+++ b/R1.md
@@ -292,3 +292,19 @@
 **Aprendizados:** Li um pouco de alguns passos pra que você deve fazer para ter uma aplicação performática com React porém tenho um certo receio de estar fazendo overengeneering, tenho q ler um pouco mais sobre renderização desnecessária no React.
 
 **Links dos trabalhos:** sem link.
+
+### Dia 37: 10 de agosto, 2020
+
+**Progresso do dia:** Voltei a mexer no projeto das plantas e alterei o funcionamento do servidor.
+
+**Aprendizados:** Usar uma biblioteca que lida com os middlewares da uma agilizada imensa no processo além de ja estar implementada de uma forma performatica, eu estava usando o celebrate que usa o Joi pra integrar de forma bem simples com o node e com poucas linhas de código ja tava tudo certo retornando o erro e seu código bonitinho.
+
+**Links dos trabalhos:** [celebrate](https://github.com/arb/celebrate)
+
+### Dia 38: 11 de agosto, 2020
+
+**Progresso do dia:** Alterei algumas coisas para deixar a interface do aplicativo de catalogação mais agradável e comecei a integrar as novas funcionalidades, li um pouco sobre UX com o livro que ganhei no sorteio do codigo falado e li um pouco sobre o react native gesture handler.
+
+**Aprendizados:** Não deixe de mudar algo porque acha que vai quebrar algo no código, ele vai quebrar você mexendo nele ou não. mas se você estiver mexendo você pode encontrar formas de fazer com que ele não se quebre ao longo do tempo alem de melhorar a performance e a legibilidade dele.
+
+**Links dos trabalhos:** [React gesture handler](https://docs.swmansion.com/react-native-gesture-handler/docs/), [Livro de UX](https://www.casadocodigo.com.br/products/livro-ux-user-experience)
