--- a/R1.md
+++ b/R1.md
@@ -308,3 +308,11 @@
 **Aprendizados:** Não deixe de mudar algo porque acha que vai quebrar algo no código, ele vai quebrar você mexendo nele ou não. mas se você estiver mexendo você pode encontrar formas de fazer com que ele não se quebre ao longo do tempo alem de melhorar a performance e a legibilidade dele.
 
 **Links dos trabalhos:** [React gesture handler](https://docs.swmansion.com/react-native-gesture-handler/docs/), [Livro de UX](https://www.casadocodigo.com.br/products/livro-ux-user-experience)
+
+### Dia 39: 12 de agosto, 2020
+
+**Progresso do dia:** Hoje eu refatorei o código das plantas novamente, dessa vez componentizando tudo que era possivel, também transformei o layout da home no layout do novo prototipo, criei um Header personalizado para a plicação, para eu poder colocar um ícone dentro dele, também comecei a implementar a lógica com as parcelas presentes, agora posso alterar o nome da parcela e isso reflete diretamente nas plantas, também li mais um pouco sobre UX e sinto que meu senso de estetica melhorou um pouco, mas ainda sim não é dos melhores.
+
+**Aprendizados:** Aprendi que quanto mais você passa a revisar o código regularmente, menos você vai mudando, porque de inicio vai estar uma bagunça, mas aos poucos a bagunça vai diminuindo de forma consideravel conforme você da manutenção no codigo regularmente, e descobri o componente Picker do React native, que vai ser bem útil para aplicação de filtros sobre as plantas.
+
+**Links dos trabalhos:** sem links
