--- a/R1.md
+++ b/R1.md
@@ -316,3 +316,22 @@
 **Aprendizados:** Aprendi que quanto mais você passa a revisar o código regularmente, menos você vai mudando, porque de inicio vai estar uma bagunça, mas aos poucos a bagunça vai diminuindo de forma consideravel conforme você da manutenção no codigo regularmente, e descobri o componente Picker do React native, que vai ser bem útil para aplicação de filtros sobre as plantas.
 
 **Links dos trabalhos:** sem links
+
+### Dia 40: 13 de agosto, 2020
+**Descanso**
+
+### Dia 41: 14 de agosto, 2020
+
+**Progresso do dia:** Estudando a base da documentação da godot pra fazer algum jogo.
+
+**Aprendizados:** nada de especial.
+
+**Links dos trabalhos:** sem links
+
+### Dia 42: 15 de agosto, 2020
+
+**Progresso do dia:** Estudei um pouco sobre modelagem 3d.
+
+**Aprendizados:** Tudo sobre a base da modelagem 3d.
+
+**Links dos trabalhos:** sem links
