--- a/R2.md
+++ b/R2.md
@@ -8,3 +8,11 @@ Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado n
 **Aprendizados:** Hoje eu aprendi que nem sempre o jeito que você acha que é o mais simples realmente é, muitas vezes existe alguma ferramenta feita para o propósito que você deseja, basta se utilizar dela em vez de querer fazer tudo na mão, também aprendi que por mais que algo pareça bem trivial, em grande parte dos casos você só tem essa percepção por não saber sobre o problema.
 
 **Link do trabalho:** Sem links
+
+### Dia 1: 19 de julho, 2021
+
+**Progresso do dia:** Hoje trabalhei mais uma vez com o bot executando musicas, o comando de play está funcionando e criando uma fila para cada servidor do discord, porém o bot ainda não está desconectando quando a fila de músicas acabam
+
+**Aprendizados:** Tenho que começar a usar o typescript do jeito certo, pois estou usando de uma forma parecida com Javascript só tipando após a implementação dar certo, vou fazer isso na migração do projeto das plantinhas de Javascript para Typescript
+
+**Link do trabalho:** Sem links
