--- a/R2.md
+++ b/R2.md
@@ -16,3 +16,11 @@ Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado n
 **Aprendizados:** Tenho que começar a usar o typescript do jeito certo, pois estou usando de uma forma parecida com Javascript só tipando após a implementação dar certo, vou fazer isso na migração do projeto das plantinhas de Javascript para Typescript
 
 **Link do trabalho:** Sem links
+
+### Dia 2: 19 de julho, 2021
+
+**Progresso do dia:** Hoje eu iniciei os estudos com socket.io para implementar um chat em tempo real, hoje fiz o get started, além de estudar o inicio da documentação, também estudei a API path do node, para manipulação do path em ambos os sistemas operacionais.
+
+**Aprendizados:** Aprendi a lidar com os métodos presentes na API path do nodejs e que o socket.io lida com eventos para implementar uma comunicação em tempo real entre o servidor e o cliente.
+
+**Link do trabalho:** [Socket.io](https://socket.io/get-started/) e [Node API path](https://nodejs.org/api/path.html)
