--- a/R2.md
+++ b/R2.md
@@ -17,10 +17,18 @@ Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado n
 
 **Link do trabalho:** Sem links
 
-### Dia 2: 19 de julho, 2021
+### Dia 2: 20 de julho, 2021
 
 **Progresso do dia:** Hoje eu iniciei os estudos com socket.io para implementar um chat em tempo real, hoje fiz o get started, além de estudar o inicio da documentação, também estudei a API path do node, para manipulação do path em ambos os sistemas operacionais.
 
 **Aprendizados:** Aprendi a lidar com os métodos presentes na API path do nodejs e que o socket.io lida com eventos para implementar uma comunicação em tempo real entre o servidor e o cliente.
 
-**Link do trabalho:** [Socket.io](https://socket.io/get-started/) e [Node API path](https://nodejs.org/api/path.html)
+**Link de Leituras:** [Socket.io](https://socket.io/get-started/) e [Node API path](https://nodejs.org/api/path.html)
+
+### Dia 3: 21 de julho, 2021
+
+**Progresso do dia:** Hoje voltei a mexer no bot implementei os comandos play, pause e resume, tentei implementar o comando de skip e stop porém ainda não finalizei descobri um bug no bot que quando a fila de reprodução termina sempre ao adicionar mais uma música ocorre um erro, também tentei adicionar alguns indicadores quando as músicas são adicionadas a fila de reprodução e quando as músicas vão ser reproduzidas
+
+**Aprendizados:** Aprendi a usar melhor o discordjs, descobri que o *async* *await* pode não ser adequado para qualquer situação visto que como quero fazer um comando que retorne as músicas presentes na fila de reprodução e isso não é possivel usando essa forma de programação assincrona, porém ainda vou estudar melhor para poder implementar essa funcionalidade.
+
+**Link de Leituras:** [StreamDispatcher discordjs](https://discord.js.org/#/docs/main/stable/class/StreamDispatcher)
