--- a/R2.md
+++ b/R2.md
@@ -32,3 +32,11 @@ Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado n
 **Aprendizados:** Aprendi a usar melhor o discordjs, descobri que o *async* *await* pode não ser adequado para qualquer situação visto que como quero fazer um comando que retorne as músicas presentes na fila de reprodução e isso não é possivel usando essa forma de programação assincrona, porém ainda vou estudar melhor para poder implementar essa funcionalidade.
 
 **Link de Leituras:** [StreamDispatcher discordjs](https://discord.js.org/#/docs/main/stable/class/StreamDispatcher)
+
+### Dia 4: 22 de julho, 2021
+
+**Progresso do dia:** Hoje eu tive alguns problemas enquanto tentava arrumar o bot do discord, então decidi exercitar o html e css então escolhi o aplicativo da nubank para clonar a interface, comecei, porém ainda estou no início, estou tentando estudar sobre variáveis no css para poder usar ele da melhor forma possivel e também quero que o clone seja facil de dar manutenção, pois quero que fique bem fiel.
+
+**Aprendizados:** Até o momento nada de especial, ainda estou no início desse clone, mas desejo implementar algumas funções como carrosel atraves do javascript, visto que até o momento eu só tinha programado para o nativo, e já existem componentes que tem essa função.
+
+**Link de Leituras:** sem links
