--- a/R2.md
+++ b/R2.md
@@ -40,3 +40,11 @@ Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado n
 **Aprendizados:** Até o momento nada de especial, ainda estou no início desse clone, mas desejo implementar algumas funções como carrosel atraves do javascript, visto que até o momento eu só tinha programado para o nativo, e já existem componentes que tem essa função.
 
 **Link de Leituras:** sem links
+
+### Dia 5: 23 de julho, 2021
+
+**Progresso do dia:** Aprendi um pouco mais profundamento sobre box model, e de forma mais profunda sobre selectors no css, além dos seletores simples também existem seletores de atributo, além das pseudo-classes e pseudo-elements.
+
+**Aprendizados:** Aprendi a diferença entre reset.css e normalize, também aprendi sobre pseudo-elements e pseudo-class e como funciona a cascata de estilos no css.
+
+**Link de Leituras:** [Da seção 0 à seção 3](https://web.dev/learn/css/)
