--- a/R2.md
+++ b/R2.md
@@ -1,50 +1,7 @@
 # 100 Days Of Code - Round 2
 
-### Dia 0: 18 de julho, 2021
+### Dia 0: 01 de Janeiro, 2022
 
-**Progresso do dia:** Hoje eu voltei a mexer no bot de discord que fiz tem um tempo e agora com a finalidade de fazer com que ele toque musica em servidores, confesso que foi um pouco estranho voltar a programar, pois fazia bastante tempo que eu não mexia em nada.
-Também voltei a mexer no projeto de catalogo de plantas que eu tinha iniciado no ano passado, estou tentando portar o projeto para Typescript e atualizei a versão do expo dele, mas mesmo assim nem tudo no projeto foi atualizado.
+**Progresso do dia:** 
 
-**Aprendizados:** Hoje eu aprendi que nem sempre o jeito que você acha que é o mais simples realmente é, muitas vezes existe alguma ferramenta feita para o propósito que você deseja, basta se utilizar dela em vez de querer fazer tudo na mão, também aprendi que por mais que algo pareça bem trivial, em grande parte dos casos você só tem essa percepção por não saber sobre o problema.
-
-**Link do trabalho:** Sem links
-
-### Dia 1: 19 de julho, 2021
-
-**Progresso do dia:** Hoje trabalhei mais uma vez com o bot executando musicas, o comando de play está funcionando e criando uma fila para cada servidor do discord, porém o bot ainda não está desconectando quando a fila de músicas acabam
-
-**Aprendizados:** Tenho que começar a usar o typescript do jeito certo, pois estou usando de uma forma parecida com Javascript só tipando após a implementação dar certo, vou fazer isso na migração do projeto das plantinhas de Javascript para Typescript
-
-**Link do trabalho:** Sem links
-
-### Dia 2: 20 de julho, 2021
-
-**Progresso do dia:** Hoje eu iniciei os estudos com socket.io para implementar um chat em tempo real, hoje fiz o get started, além de estudar o inicio da documentação, também estudei a API path do node, para manipulação do path em ambos os sistemas operacionais.
-
-**Aprendizados:** Aprendi a lidar com os métodos presentes na API path do nodejs e que o socket.io lida com eventos para implementar uma comunicação em tempo real entre o servidor e o cliente.
-
-**Link de Leituras:** [Socket.io](https://socket.io/get-started/) e [Node API path](https://nodejs.org/api/path.html)
-
-### Dia 3: 21 de julho, 2021
-
-**Progresso do dia:** Hoje voltei a mexer no bot implementei os comandos play, pause e resume, tentei implementar o comando de skip e stop porém ainda não finalizei descobri um bug no bot que quando a fila de reprodução termina sempre ao adicionar mais uma música ocorre um erro, também tentei adicionar alguns indicadores quando as músicas são adicionadas a fila de reprodução e quando as músicas vão ser reproduzidas
-
-**Aprendizados:** Aprendi a usar melhor o discordjs, descobri que o *async* *await* pode não ser adequado para qualquer situação visto que como quero fazer um comando que retorne as músicas presentes na fila de reprodução e isso não é possivel usando essa forma de programação assincrona, porém ainda vou estudar melhor para poder implementar essa funcionalidade.
-
-**Link de Leituras:** [StreamDispatcher discordjs](https://discord.js.org/#/docs/main/stable/class/StreamDispatcher)
-
-### Dia 4: 22 de julho, 2021
-
-**Progresso do dia:** Hoje eu tive alguns problemas enquanto tentava arrumar o bot do discord, então decidi exercitar o html e css então escolhi o aplicativo da nubank para clonar a interface, comecei, porém ainda estou no início, estou tentando estudar sobre variáveis no css para poder usar ele da melhor forma possivel e também quero que o clone seja facil de dar manutenção, pois quero que fique bem fiel.
-
-**Aprendizados:** Até o momento nada de especial, ainda estou no início desse clone, mas desejo implementar algumas funções como carrosel atraves do javascript, visto que até o momento eu só tinha programado para o nativo, e já existem componentes que tem essa função.
-
-**Link de Leituras:** sem links
-
-### Dia 5: 23 de julho, 2021
-
-**Progresso do dia:** Aprendi um pouco mais profundamento sobre box model, e de forma mais profunda sobre selectors no css, além dos seletores simples também existem seletores de atributo, além das pseudo-classes e pseudo-elements.
-
-**Aprendizados:** Aprendi a diferença entre reset.css e normalize, também aprendi sobre pseudo-elements e pseudo-class e como funciona a cascata de estilos no css.
-
-**Link de Leituras:** [Da seção 0 à seção 3](https://web.dev/learn/css/)
+**Aprendizados:** 
