--- a/R2.md
+++ b/R2.md
@@ -2,6 +2,12 @@
 
 ### Dia 0: 01 de Janeiro, 2022
 
-**Progresso do dia:** 
+**Progresso do dia:** Hoje comecei continuei meus estudos no GameMaker Studio 2, vi 3 videos, implementei o que foi mostrado neles, e comecei a ler a documentação, provavelmente só vou falar da documentação novamente quando eu terminar de ler ela, mas por enquanto tá sendo bem divertido, tô vendo o básico da engine mesmo
 
-**Aprendizados:** 
+**Aprendizados:** Acredito que o maior aprendizado de hoje, foi uma coisa simples, mas que achei bem massa, foi o jeio de fazer o personagem se mover na horizontal sem ter que fazer ifs pra isso, fazendo algo do tipo `var move = key_right - key_left` pra levar em conta que quando é negativo ele está se movendo pra esquerda e positivo pra direita.
+
+**Links:** 
+[Documentação GameMaker](https://manual-br.yoyogames.com/#t=Content.htm)
+[[BR] Crie Seu Primeiro Jogo - Guselect | GameMaker](https://youtu.be/ypo83R7sIg0)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 1: Basics)](https://youtu.be/izNXbMdu348)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 2: Animated Player)](https://youtu.be/Y6l02DcpSR4)
