--- a/R2.md
+++ b/R2.md
@@ -1,13 +1,32 @@
 # 100 Days Of Code - Round 2
 
-### Dia 0: 01 de Janeiro, 2022
+<!-- ### Dia 0: 01 de Janeiro, 2022
 
+**Progresso do dia:** 
+
+**Aprendizados:**
+
+**Links:** -->
+### Dia 0: 01 de Janeiro, 2022
 **Progresso do dia:** Hoje comecei continuei meus estudos no GameMaker Studio 2, vi 3 videos, implementei o que foi mostrado neles, e comecei a ler a documentação, provavelmente só vou falar da documentação novamente quando eu terminar de ler ela, mas por enquanto tá sendo bem divertido, tô vendo o básico da engine mesmo
 
 **Aprendizados:** Acredito que o maior aprendizado de hoje, foi uma coisa simples, mas que achei bem massa, foi o jeio de fazer o personagem se mover na horizontal sem ter que fazer ifs pra isso, fazendo algo do tipo `var move = key_right - key_left` pra levar em conta que quando é negativo ele está se movendo pra esquerda e positivo pra direita.
 
-**Links:** 
-[Documentação GameMaker](https://manual-br.yoyogames.com/#t=Content.htm)
-[[BR] Crie Seu Primeiro Jogo - Guselect | GameMaker](https://youtu.be/ypo83R7sIg0)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 1: Basics)](https://youtu.be/izNXbMdu348)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 2: Animated Player)](https://youtu.be/Y6l02DcpSR4)
+**Links:**   
+[Documentação GameMaker](https://manual-br.yoyogames.com/#t=Content.htm)  
+[[BR] Crie Seu Primeiro Jogo - Guselect | GameMaker](https://youtu.be/ypo83R7sIg0)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 1: Basics)](https://youtu.be/izNXbMdu348)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 2: Animated Player)](https://youtu.be/Y6l02DcpSR4)  
+
+---
+
+### Dia 1: 02 de Janeiro, 2022
+
+**Progresso do dia:** Hoje vi mais 3 vídeos da playlist sobre fazer um jogo de plataforma e a partir deles foi adicionado a arma do jodador, o inimigo do jogo e por fim foi adicionada a função de interagir com o jogo atraves do controle
+
+**Aprendizados:** Acredito que principalmente a parte de mexer com angulos, com relação a adição da arma e os tiros do jogador e também o momento que o inimigo morre, que é criado um novo objeto para o inimigo morto o objeto do inimigo é destruido, e sobre a adição do controle foi tudo novo pra mim no dia de hoje.
+
+**Links:**   
+[]()
+[]()
+[]()
