--- a/R2.md
+++ b/R2.md
@@ -27,6 +27,6 @@
 **Aprendizados:** Acredito que principalmente a parte de mexer com angulos, com relação a adição da arma e os tiros do jogador e também o momento que o inimigo morre, que é criado um novo objeto para o inimigo morto o objeto do inimigo é destruido, e sobre a adição do controle foi tudo novo pra mim no dia de hoje.
 
 **Links:**   
-[]()
-[]()
-[]()
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 3: Shooting & Recoil)](https://youtu.be/fCeyiEcWRAs)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 4: Enemies, Hitflash etc)](https://youtu.be/JsVqc2dnftU)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 5: Gamepads / Controllers)](https://www.youtube.com/watch?v=5WGesYns4mk&ab_channel=ShaunSpalding)  
