--- a/R2.md
+++ b/R2.md
@@ -30,3 +30,17 @@
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 3: Shooting & Recoil)](https://youtu.be/fCeyiEcWRAs)  
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 4: Enemies, Hitflash etc)](https://youtu.be/JsVqc2dnftU)  
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 5: Gamepads / Controllers)](https://www.youtube.com/watch?v=5WGesYns4mk&ab_channel=ShaunSpalding)  
+
+---
+
+ ### Dia 2: 03 de Janeiro, 2022
+
+**Progresso do dia:** Hoje na série de tutoriais de GameMaker que estou vendo, fiz um script para a tela tremer e poder usar ele em diversos outros objetos, também fiz um background em parallax e uma tela de Menu que eu achei que fosse necessário bem mais código pra fazer, mas a engine abstrai muita coisa.
+Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais pra colocar em prática um pouco de docker usando banco de dados MariaDB inicialmente, tentando documentar todas as partes importantes porque pode ser útil para o TCC no fim pretendo hospedar tanto o banco quanto o backend.
+
+**Aprendizados:** Todos  os conceitos foram novos pra mim com relação a desenvolvimento de jogos, deu pra absorver bastante como a engine funciona principalmente com relação ao parallax.
+
+**Links:**  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 8: Screenshake)](https://youtu.be/r9OYXCUydGg)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 9: Parallax backgrounds)](https://youtu.be/nAwKpiOfR-k)  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 10: Menu screen)](https://youtu.be/fWAhi10q1ZE)  
