--- a/R2.md
+++ b/R2.md
@@ -44,3 +44,20 @@ Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais 
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 8: Screenshake)](https://youtu.be/r9OYXCUydGg)  
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 9: Parallax backgrounds)](https://youtu.be/nAwKpiOfR-k)  
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 10: Menu screen)](https://youtu.be/fWAhi10q1ZE)  
+
+---
+
+### Dia 3: 04 de Janeiro, 2022
+
+> O plano é tentar finalizar os 10 vídeos restantes amanhã, para no dia seguinte já começar a fazer o jogo que fizemos na jam de 2020 que não chegamos a terminar
+
+**Progresso do dia:** Hoje fiz a parte de salvar e carregar o jogo de forma mais simples, usar um objeto pai que herda as caracteristicas do objeto filho, foram adicionados os sons do jogos, a colisão com o inimigo resultado em moste e por fim foi adicionada uma placa que ao ser clicada abre um balão de fala, tudo com base nos tutoriais.
+
+**Aprendizados:** Hoje foi um dia com mecanicas bem simples sendo apresentadas, porém no fim ao adicionar a placa foi a parte mais interessante que foi como criar um balão de fala.
+
+**Links:** 
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 11: Save & Load)](https://youtu.be/c1gx7NMZ0Uc)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 12: Parent + child objects)](https://youtu.be/---0DLrskxQ)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 13: Sound effects)](https://youtu.be/AfQFZXdmAEs)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 14: Dying )](https://youtu.be/d7ztOC4Jffo)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 15: Signposts)](https://youtu.be/1gUgIry5JPw)
